apply plugin: 'java-library'

dependencies {
    api (
        'commons-codec:commons-codec:1.14',
        'com.google.guava:guava:28.2-jre',
        'io.dropwizard.metrics:metrics-core:4.1.2',
        'org.slf4j:slf4j-api:1.7.30',
        'org.glassfish.jersey.media:jersey-media-json-jackson:2.29.1',
        'com.j256.simplemagic:simplemagic:1.16',
        'org.apache.logging.log4j:log4j-core:2.13.0',
        'org.apache.logging.log4j:log4j-slf4j-impl:2.13.0',
        'javax.annotation:javax.annotation-api:1.3.2',

        'com.github.spotbugs:spotbugs-annotations:3.1.12',
        'io.swagger.core.v3:swagger-annotations:2.1.1',
    )

    implementation (
        'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.2',
        'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.10.2',
        'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.2',
        'org.apache.commons:commons-compress:1.19',
    )
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
